creacion ventana veterinario

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,14 +29,14 @@ dist.jar=${dist.dir}/MuuuuSeguro.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jcalendar-1.4.jar=C:\\Users\\John Silva\\Downloads\\jcalendar-1.4.jar
-file.reference.PlaceHolder.jar=C:\\Users\\John Silva\\Downloads\\PlaceHolder.jar
+file.reference.jcalendar-1.4.jar=src/Interfaz/Libs/jcalendar-1.4.jar
+file.reference.PlaceHolder.jar=src/Interfaz/Libs/PlaceHolder.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${libs.absolutelayout.classpath}:\
     ${file.reference.PlaceHolder.jar}:\
-    ${file.reference.jcalendar-1.4.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
